restructuring my code and adding relevant comments
