# src/routes/comment.ts
@@ -6,41 +6,20 @@ import { Strategy, ExtractJwt } from 'passport-jwt';
 import Login from '../model/login'
 import dotenv from 'dotenv'
 import postModel from '../model/postModel';
+import jwt, { JwtPayload } from 'jsonwebtoken'
 dotenv.config()
 commentRouter.use(express.json())
 commentRouter.use(passport.initialize())
-//commentRouter.post('/postcomment', allowUserToPostComment)
 commentRouter.post('/blog/:id/postcomment', allowUserToPostComment)
-//commentRouter.get('/getcomment/:id', accessSingleComment)
-// commentRouter.get('/blog/:id/getcomment', accessSingleComment)
 commentRouter.get('/getallcomment', authenticateToSeeAllCommentIn)
 commentRouter.delete('/deletecomment/:id', deleteSingleComment)
+commentRouter.post("/comment/:id/postlike", postLikes)
 
 
 const jwtOptions = {
     jwtFromRequest: ExtractJwt.fromAuthHeaderAsBearerToken(),
     secretOrKey : process.env.ACCESS_TOKEN_SECRET || 'heyyou'
 }
-
-
-// export async function allowUserToPostComment(req:Request, res:Response) {
-//     try{
-
-//         const newComment = new Comment ({
-//         commentMessage: req.body.commentMessage,
-//         likes: req.body.likes
-//         })
-//         await newComment.save()
-//         res.json({status: "ok",comment: "send successfully"})
-//     } catch(err){
-//         console.log(err)
-
-//     }
-    
-// }
-
-
-
 
 
 export async function allowUserToPostComment (req:Request, res:Response, next: Function) {
@@ -53,10 +32,13 @@ export async function allowUserToPostComment (req:Request, res:Response, next: F
                 return res.status(400).json({status: 400, error: "invalid token"})
     
             }
+            const token = req.headers.authorization?.split(' ')[1]
+            const verification = jwt.verify(token!, process.env.ACCESS_TOKEN_SECRET || 'heyyou') as JwtPayload
+            const getusername = verification.username
             const newComment = new Comment ({
                 postId: req.params.id,
                 commentMessage: req.body.commentMessage, 
-                username: req.body.username
+                username: getusername
                 
             })
             const comment = await newComment.save()
@@ -75,6 +57,39 @@ export async function allowUserToPostComment (req:Request, res:Response, next: F
     
 }
 
+
+
+export async function postLikes (req:Request, res:Response, next: Function) {
+    passport.authenticate('jwt', {session:false}, async(err:any, user:any, info:any)=>{
+        try{
+            if(err){
+                return next(err)
+            }
+            if(!user){
+                return res.status(400).json({status: 400, error: "invalid token"})
+    
+            }
+            const getId = req.params.id
+            const getUserId = user.id
+            const findCommentId = await Comment.findById(getId)
+            if(findCommentId?.likes.includes(getUserId)){
+                const likesLength = findCommentId?.likes.length
+                findCommentId?.likes.splice(likesLength - 1, 1)
+                await findCommentId?.save()
+                console.log(findCommentId?.likes)
+                res.json({"message": "already liked"})
+
+            } else {
+                findCommentId?.likes.push(getUserId)
+                await findCommentId?.save()
+                res.json({"message": "liked"})  
+            }
+        } catch(error){
+            next(error)
+        }
+    })(req,res,next)
+
+}
 
 
 
@@ -141,6 +156,8 @@ passport.use(new Strategy( jwtOptions, async(jwtPayload, done: Function) => {
         done(err)
     }
 }))
+
+
 
 
 
